# AI_Enabled-HRC-for-desoldering-of-PCB-components

./: handfreesetup.txt  readme.md  readme.txt
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: Llmfeedback.msg  Safetycheck.msg
custome_interfaces/: CMakeLists.txt  package.xml
custome_interfaces/msg/: ComponentData.msg  LlmFeedback.msg
custome_interfaces/srv/: ComponentDetection.srv
llm_communicator/: package.xml  setup.cfg  setup.py
llm_communicator/configs/: ai_redgo.txt  id_selection.txt
llm_communicator/llm_communicator/: ai_redgo.py  tst_sound.py
llm_communicator/resource/: ai_redgo.txt  id_selection.txt  intent_classifier.txt  robot_commands.txt  trash.txt
safety_check/: package.xml  setup.cfg  setup.py
safety_check/safety_check/: hand_landmark_class.py  realsense_class.py
safety_check/safety_check/scripts/: client_backup.py  component_detection_server.py  component_selection_gui_client.py  component_selection_gui_clientv1.py  graphical_user_interface.py  graphical_user_interfacev1.py  graphical_user_interfacev2.py  graphical_user_interfacev3.py  gui_componentselection.py  guiv3_.py  hand_landmarker_publisher.py  ss.py  wrist_detection.py  wristcamera_publisher.py
safety_check/safety_check/scripts/garbish/: gui_ros2.py
safety_check/scripts/: graphical_user_interface.py  gui.py  guiv2.py  hand_landmarker_publisher.py
ur5e_move/: CMakeLists.txt  package.xml
ur5e_move/include/ur5e_move/: data_object.hpp  desoldering_automatic_sequence.hpp  heatsequencelogic.hpp  moverobotclass.hpp
ur5e_move/launch/: automatic_desoldering.launch.py  heat_logic.launch.py
ur5e_move/src/: data_object.cpp  desoldering_automatic_sequence.cpp  heatsequencelogic.cpp  move_robot_automatic_sequence.cpp  move_robot_logicv0.cpp  move_robot_logicv1.cpp  moverobotclass.cpp  rtde_test.cpp  test_obj.cpp  untouch_v0.cpp
voice_command/: package.xml  setup.py
voice_command/voice_command/: soundtest.py  voice_command_system.py
